--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -1,5 +1,51 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Kanit";
+  background-color: black;
+  color: white;
 }
 
 /* Start coding here */
+.teashop-card {
+  background-color: white;
+  width: 500px;
+  height: 250px;
+  margin: 20% auto;
+  position: relative;
+}
+
+.teashop-img {
+  border-radius: 1%;
+  width: 98%;
+  height: 98%;
+  position: absolute;
+  background-image: linear-gradient(
+      to top,
+      rgba(255, 255, 255, 0) 0,
+      rgba(0, 0, 0, 0.493) 0,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    url(./preview-img.jpeg);
+  top: 1%;
+  left: 1%;
+}
+
+.teashop-tag {
+  position: absolute;
+  top: 5%;
+  right: 0%;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 5px 16px;
+  font-size: 1rem;
+}
+
+.teashop-title {
+  position: absolute;
+  bottom: 1%;
+  left: 2%;
+}
