--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -1,1 +1,59 @@
 /* Start coding here */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+.chatroom-title {
+  width: 100vw;
+  background-color: gray;
+  font-size: 2rem;
+  color: white;
+  padding: 5px;
+  margin-bottom: 20px;
+}
+
+.bubble-left,
+.bubble-right {
+  width: 150px;
+  padding: 10px;
+  border-radius: 50px;
+  font-size: 0.8rem;
+  margin: 5px 10px;
+}
+
+.bubble-left {
+  background-color: gray;
+}
+
+.bubble-right:first-child,
+.bubble-right:last-child {
+  background-color: rgb(0, 175, 0);
+}
+
+.bubble-right {
+  background-color: rgb(226, 226, 226);
+}
+
+.chatroom-right {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.bubble-right-2 {
+  position: relative;
+}
+
+.bubble-close {
+  background-color: rgb(161, 161, 161);
+  border-radius: 100%;
+  padding: 5px;
+  font-size: 0.3rem;
+  color: white;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
