--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -1,5 +1,63 @@
-body {
+*{
   font-family: "Kanit";
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-/* Start coding here */
+body{
+  background-color: black;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container{
+  position: relative;
+  width: 644px;
+  height: 325px;
+  background-color: white;
+  z-index: 1;
+}
+img{
+  position: absolute;
+  border-radius: 10px;
+  left: 10px;
+  top: 10px;
+  z-index: 10;
+}
+.whitebox{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 644px;
+  height: 330px;
+}
+.detail{
+  position: absolute;
+  left: 20px;
+  bottom: 15px;
+  color: white;
+  font-size: 1.5rem;
+  z-index: 100;
+}
+.placename{
+  position: absolute;
+  background-color: rgba(0,0,0,0.6);
+  padding: 10px 20px;
+  right: 10px;
+  top: 20%;
+  z-index: 10;
+  font-size: 1.5rem;
+  color: white;
+}
+.shadow{
+  position: absolute;
+  left: 7px;
+  bottom: 10px;
+  width: 630px;
+  height: 50px;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 20;
+  filter: blur(5px);
+}
