--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -35,6 +35,7 @@
 
 .bubble-right {
   background-color: rgb(226, 226, 226);
+  z-index: 10;
 }
 
 .chatroom-right {
@@ -56,4 +57,26 @@
   position: absolute;
   top: 0px;
   right: 0px;
+}
+
+.bubble-tail-1 {
+  background-color: rgb(0, 175, 0);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  top: 70px;
+  right: 8px;
+  z-index: 1;
+}
+
+.bubble-tail-2 {
+  background-color: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  top: 65px;
+  right: 12px;
+  z-index: 2;
 }
