--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -1,1 +1,72 @@
-/* Start coding here */
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+nav{
+  background-color: darkgrey;
+  padding: 20px;
+  color: white;
+  font-size: 2rem;
+}
+.Navbar{
+  width: 100vw;
+}
+main{
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+.right-1,.right-3{
+  position: absolute;
+  background-color: forestgreen;
+}
+.left-1,.left-2,.right-2{
+  background-color: darkgrey;
+  position: absolute;
+  z-index: 5;
+}
+div{
+  width: 150px;
+  height: 50px;
+  border-radius: 40px;
+  align-content: center;
+  padding-left: 10px;
+}
+.right-1 ,.right-2,.right-3{
+  right: 40px;
+  top: 10px;
+}
+.right-2{
+  right: 40px;
+  top: 70px;
+  background-color: lightgray;
+}
+.right-3{
+  right: 40px;
+  top: 130px;
+}
+.left-1{
+  left: 20px;
+  top: 180px;
+}
+.left-2{
+  left:20px;
+  top: 240px;
+}
+.fa-moon{
+  color: forestgreen;
+  position: absolute;
+  font-size: 2rem;
+  top: 10px;
+  right: 35px;
+  z-index: 100;
+  transform: rotate(270deg);
+}
+.fa-circle-xmark{
+  color: lightgray;
+  position: absolute;
+  top: 70px;
+  right: 30px;
+  z-index: 100;
+}
