--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -1,5 +1,58 @@
 body {
   font-family: "Kanit";
+  background-color: black;
 }
-
-/* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  display: flex;
+}
+img {
+  width: 100vw;
+  height: 35vh;
+  padding: 10px 5px;
+  margin: 10px;
+}
+.content {
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  width: 550px;
+  height: 270px;
+  padding: ;
+  margin: px;
+  position: relative;
+  top: 100px;
+  left: 500px;
+  align-items: center;
+}
+.FIXBOX1 {
+  position: absolute;
+  color: rgb(250, 250, 254);
+  z-index: 3;
+  top: 330px;
+  left: 520px;
+  padding: 20px;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(0, 0, 0, 0.545)
+  );
+  width: 33.5vw;
+  height: 30px;
+  padding: 5px;
+}
+.FIXBOX2 {
+  position: absolute;
+  color: white;
+  font-size: 20px;
+  z-index: 3;
+  top:130px;
+  left: 940px;
+  background-color: rgba(0, 0, 0, 0.405);
+  width: 100px;
+  padding: 10px;
+  text-align: center;
+}
