--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -1,1 +1,85 @@
-/* Start coding here */
+*{
+    padding: 0;
+    margin: 0;
+}
+header {
+    font-size: 30px;
+    background-color: grey;
+    width: 100vw;
+    height: 40px;
+    align-items: flex-start;
+    color: white;
+}
+main {
+    width: 100vw;
+    height: 100hw;
+    position: relative;
+    z-index: 0;
+    font: 1rem;
+}
+.chat {
+    color: black;
+    position: absolute;
+    width: 150px;
+    height: 30px;
+    background-color: rgba(24, 190, 24, 1);
+    border-radius: 10px 10px;
+}
+.left4,.left5 {
+    background-color: grey;
+
+}
+
+.right1 {
+    position: absolute;
+    z-index: 2;
+    right: 40px;
+    top: 20px;
+}
+.right2 {
+    z-index: 2;
+    right:40px;
+    top: 60px;
+    background-color: rgba(144, 135, 135, 0.811);
+}
+.right3 {
+    z-index: 2;
+    right: 40px;
+    top: 100px;
+}
+.left4 {
+    z-index: 2;
+    left: 40px;
+    top:150px;
+}
+.left5 {
+    z-index: 2;
+    left: 40px;
+    top:200px;
+}
+.closex {
+    color: rgba(244, 235, 235, 0.945);
+    position: absolute;
+    padding: 5px;
+    z-index: 3;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: rgb(57, 56, 55);
+    text-align: center;
+    right: 35px;
+    top: 55px;
+    font-size: 10px;
+}
+.tail {
+    position: absolute;
+    z-index: 2;
+    width: 20px;
+    height: 20px;
+    transform: rotate( );
+    box-shadow: 5px 5px 0px 0px rgba(24, 190, 24, 1);
+    border-radius: 50%;
+    top: 7px;
+    right: 45px;
+    }
+
